Refactor CSS files for improved styling and responsiveness; remove unused Discord.js and update HTML links for better organization

--- a/flying.html
+++ b/flying.html
@@ -10,7 +10,7 @@
     href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet" />
   <title>Hypekingfish</title>
-  <link href="style.css" rel="stylesheet" />
+  <link href="css/Base.css" rel="stylesheet" />
   <link href="css/Controller.css" rel="stylesheet" />
   <link href="css/Footer.css" rel="stylesheet" />
   <link href="css/Hangar.css" rel="stylesheet" />
@@ -123,26 +123,6 @@
             </div>
         </section> -->
   <section class="Vatsim-Controlling">
-    <h2 class="glitch-text">
-      <span class="plane-icon">✈️</span> My VATSIM ATC Journey
-    </h2>
-
-    <!-- Gallery Section -->
-    <div class="gallery-grid">
-      <figure>
-        <img src="img/PDX_ASDEX.png" alt="VATSIM PDX ASDEX Controller Display" class="lightbox-trigger" />
-        <figcaption>PDX ASDEX Controller Display</figcaption>
-      </figure>
-      <figure>
-        <img src="img/Seattle_Tower.png" alt="Seattle Tower View" class="lightbox-trigger" />
-        <figcaption>Seattle Tower Operations</figcaption>
-      </figure>
-      <figure>
-        <img src="img/ATC-Radar.png" alt="Radar Monitoring in Action" class="lightbox-trigger" />
-        <figcaption>Radar Monitoring in Action</figcaption>
-      </figure>
-    </div>
-
     <!-- About Section -->
     <div class="About-Vatsim-Controlling">
       <p>
