Refactor About.css and style.css for improved button styling and layout; enhance mobile responsiveness and update HTML links for better user experience

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
         href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet" />
     <title>Hypekingfish</title>
-    <link href="style.css" rel="stylesheet" />
+    <!-- <link href="style.css" rel="stylesheet" /> -->
     <link href="css/About.css" rel="stylesheet" />
+    <link href="css/Base.css" rel="stylesheet" />
     <link href="css/Footer.css" rel="stylesheet" />
     <link href="css/Nav.css" rel="stylesheet" />
     <link href="css/Scroll.css" rel="stylesheet" />
@@ -99,9 +100,9 @@
             <div class="about-extra">
                 <h3>Let's Connect!</h3>
                 <p>
-                    I love meeting new people who share my interests. Feel free to reach out via
-                    <a href="mailto:hypekingfishttv@gmail.com">email</a> or connect on
-                    <a href="https://discord.gg/yourdiscord" target="_blank">Discord</a>!
+                    I love meeting new people who share my interests. Feel free to reach out via the buttons!
+                    <a href="https://discord.gg/AxeJ6ryn2x">Join My Discord!</a>
+                    <a href="mailto:hypekingfishttv@gmail.com">Email Me!</a>
                 </p>
             </div>
         </section>
