--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet" />
     <title>Hypekingfish</title>
-    <link href="style.css" rel="stylesheet" />
+    <!-- <link href="style.css" rel="stylesheet" /> -->
     <link href="css/About.css" rel="stylesheet" />
-    <link href="css/Base.css" rel="stylesheet" />
+    <link href="css/Background.css" rel="stylesheet" />
     <link href="css/Footer.css" rel="stylesheet" />
     <link href="css/Nav.css" rel="stylesheet" />
     <link href="css/Scroll.css" rel="stylesheet" />
