Comment out link to Base.css in index.html to prevent loading of unused styles

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Hypekingfish</title>
     <link href="style.css" rel="stylesheet" />
     <link href="css/About.css" rel="stylesheet" />
-    <link href="css/Base.css" rel="stylesheet" />
+    <!-- <link href="css/Base.css" rel="stylesheet" /> -->
     <link href="css/Footer.css" rel="stylesheet" />
     <link href="css/Nav.css" rel="stylesheet" />
     <link href="css/Scroll.css" rel="stylesheet" />
