Add membership section and styling to Facts.css; update index.html to include Facts.css

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Hypekingfish</title>
     <link href="style.css" rel="stylesheet" />
     <link href="css/About.css" rel="stylesheet" />
+    <link href="css/Facts.css" rel="stylesheet" />
     <link href="css/Footer.css" rel="stylesheet" />
     <link href="css/Nav.css" rel="stylesheet" />
     <link href="css/Scroll.css" rel="stylesheet" />
@@ -66,15 +67,6 @@
                         <li>Programming Projects (<a href="project.html">see Projects page</a>)</li>
                         <li>Open-source tools for simmers and streamers</li>
                     </ul>
-
-                    <h3>Fun Facts</h3>
-                    <ul>
-                        <li><strong>Favorite Aircraft:</strong> Boeing 737-800</li>
-                        <li><strong>Most Hours in Game:</strong> MSFS 2020 (1,700+)</li>
-                        <li><strong>Favorite Game:</strong> Microsoft Flight Simulator</li>
-                        <li><strong>Favorite IDE:</strong> Visual Studio Code</li>
-                        <li><strong>Favorite Coding Music:</strong> Rock, Country</li>
-                    </ul>
                 </div>
             </div>
 
@@ -87,24 +79,69 @@
                 </p>
             </div>
 
-            <div class="about-extra">
-                <h3>My Setup</h3>
-                <ul>
-                    <li><strong>PC Specs:</strong> Intel I7-10700F, NVIDIA GeForce RTX 2060, 64GB DDR4 Memory</li>
-                    <!-- <li><strong>Flight Controls:</strong> Honeycomb Alpha & Bravo, Thrustmaster TPR pedals</li> -->
-                    <li><strong>Streaming Gear:</strong> Elgato Stream Deck</li>
-                </ul>
-            </div>
-
-            <div class="about-extra">
-                <h3>Let's Connect!</h3>
+            <section class="facts-section">
+                <h1>Get to know me!</h1>
                 <p>
-                    I love meeting new people who share my interests. Feel free to reach out via the buttons!
-                    <a href="https://discord.gg/AxeJ6ryn2x">Join My Discord!</a>
-                    <a href="mailto:hypekingfishttv@gmail.com">Email Me!</a>
+                    Support Hypekingfish and unlock exclusive perks by joining a membership tier on
+                    <a href="https://ko-fi.com/hypekingfish/tiers" target="_blank" rel="noopener">Ko-fi</a>!
                 </p>
-            </div>
-        </section>
+                <div class="pricing-table">
+                    <div class="pricing-tier">
+                        <h2 id="kofi-bronze">Bronze</h2>
+                        <p class="price">$2.50/month</p>
+                        <div class="tier-description">
+                            <ul>
+                                <li>Discord Role</li>
+                                <li>5% Ko-Fi Discount</li>
+                            </ul>
+                        </div>
+                        <a class="join-btn" href="https://ko-fi.com/hypekingfish/tiers" target="_blank"
+                            rel="noopener">Join</a>
+                    </div>
+                    <div class="pricing-tier">
+                        <h2>Silver</h2>
+                        <p class="price">$5/month</p>
+                        <div class="tier-description">
+                            <ul>
+                                <li>All Bronze Perks</li>
+                                <li>10% Ko-Fi Discount</li>
+                            </ul>
+                        </div>
+                        <a class="join-btn" href="https://ko-fi.com/hypekingfish/tiers" target="_blank"
+                            rel="noopener">Join</a>
+                    </div>
+                    <div class="pricing-tier">
+                        <h2>Gold</h2>
+                        <p class="price">$10/month</p>
+                        <div class="tier-description">
+                            <ul>
+                                <li>All Silver Perks</li>
+                                <li>Free Streamer Bot Extension's</li>
+                            </ul>
+                            <a class="join-btn" href="https://ko-fi.com/hypekingfish/tiers" target="_blank"
+                                rel="noopener">Join</a>
+                        </div>
+                    </div>
+
+                    <div class="about-extra">
+                        <h3>My Setup</h3>
+                        <ul>
+                            <li><strong>PC Specs:</strong> Intel I7-10700F, NVIDIA GeForce RTX 2060, 64GB DDR4 Memory
+                            </li>
+                            <!-- <li><strong>Flight Controls:</strong> Honeycomb Alpha & Bravo, Thrustmaster TPR pedals</li> -->
+                            <li><strong>Streaming Gear:</strong> Elgato Stream Deck</li>
+                        </ul>
+                    </div>
+
+                    <div class="about-extra">
+                        <h3>Let's Connect!</h3>
+                        <p>
+                            I love meeting new people who share my interests. Feel free to reach out via the buttons!
+                            <a href="https://discord.gg/AxeJ6ryn2x">Join My Discord!</a>
+                            <a href="mailto:hypekingfishttv@gmail.com">Email Me!</a>
+                        </p>
+                    </div>
+            </section>
     </main>
 
     <footer class="site-footer">
