Update footer links in aviation-trivia.html to point to the correct GitHub and YouTube channels; remove unused button in streaming.html for cleaner code.

--- a/aviation-trivia.html
+++ b/aviation-trivia.html
@@ -39,7 +39,7 @@
                 <img src="img/Progress_Pride_Flag.png" alt="Progress Pride Flag" class="footer-flag" />
             </div>
             <div class="footer-social">
-                <a href="https://github.com/[your-actual-username]" aria-label="GitHub" target="_blank"
+                <a href="https://github.com/Hypekingfish" aria-label="GitHub" target="_blank"
                     rel="noopener noreferrer">
                     <i class="fab fa-github"></i>
                 </a>
@@ -47,7 +47,7 @@
                     rel="noopener noreferrer">
                     <i class="fab fa-x-twitter"></i>
                 </a>
-                <a href="https://youtube.com/yourchannel" aria-label="YouTube" target="_blank"
+                <a href="https://youtube.com/fishnbuckjr02" aria-label="YouTube" target="_blank"
                     rel="noopener noreferrer">
                     <i class="fab fa-youtube"></i>
                 </a>
