--- a/index.html
+++ b/index.html
@@ -16,13 +16,17 @@
     <link href="css/Footer.css" rel="stylesheet" />
     <link href="css/Nav.css" rel="stylesheet" />
     <link href="css/Scroll.css" rel="stylesheet" />
+    <link href="css/Snow.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="/img/FnBLogo_FINAL_800.png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <script src="https://kit.fontawesome.com/f78443c527.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-
+    <section>
+        <div id="snow-container"></div>
+        <div id="snow-ground"></div>
+    </section>
     <div class="topnav">
         <a href="index.html" class="active"><img src="img/FnBLogo_FINAL_800.png" alt="Logo" />Hypekingfish</a>
         <span id="local-time" class="time-display"></span>
@@ -212,6 +216,7 @@
     </script>
     <script src="scripts/navmenu.js"></script>
     <script src="scripts/scroll.js"></script>
+    <script src="scripts/snow.js"></script>
     <script src="scripts/time.js"></script>
 </body>
 
