--- a/flying.html
+++ b/flying.html
@@ -230,11 +230,11 @@
     document.getElementById("year").textContent = new Date().getFullYear();
   </script>
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script src="scripts/atc.js"></script>
+  <!-- <script src="scripts/atc.js"></script> -->
   <script src="scripts/carousel.js"></script>
-  <script src="scripts/combined.js"></script>
+  <!-- <script src="scripts/combined.js"></script> -->
   <script src="scripts/hangar.js"></script>
-  <script src="scripts/pilot.js"></script>
+  <!-- <script src="scripts/pilot.js"></script> -->
   <script src="scripts/plane.js"></script>
   <script src="scripts/Metar.js"></script>
   <!-- <script src="scripts/Modal.js"></script> -->
