Comment out unused elements and scripts in flying.html for improved clarity

--- a/flying.html
+++ b/flying.html
@@ -41,7 +41,6 @@
     <!-- <h2><img src="https://zseartcc.org/public/images/seattle_pics/Seattle_edit.png" class="rainbow-box">Seattle ARTCC Overview</h2> -->
     <div id="vatsim-stats">
       <h2>my VATSIM Stats</h2>
-      <div class="static-line"></div>
       <div class="stats-container">
         <div class="stat-item">
           <h3>Total Pilot Hours</h3>
@@ -67,7 +66,7 @@
     </div>
 
 
-    <div id="flight-summary-banner"></div>
+    <!-- <div id="flight-summary-banner"></div>
     <div id="metar-ticker"><span id="metar-ticker-text"></span></div>
     <div id="metar-container" class="fade-in">
       <div class="row"><span class="label">Station:</span> <span id="airport-code"></span>
@@ -85,7 +84,7 @@
       <div class="row"><span class="label">Weather:</span> <span id="weather"></span></div>
       <div class="row"><span class="label">Sky:</span> <span id="sky-conditions"></span></div>
       <div class="row"><span class="label">Observation Time:</span> <span id="obs-time"></span></div>
-    </div>
+    </div> -->
     <div class="flight-container">
       <div class="airport-label left">PDX (Portland Intl)</div>
       <div class="flight-path">
@@ -230,11 +229,11 @@
     document.getElementById("year").textContent = new Date().getFullYear();
   </script>
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <!-- <script src="scripts/atc.js"></script> -->
+  <script src="scripts/atc.js"></script>
   <script src="scripts/carousel.js"></script>
-  <!-- <script src="scripts/combined.js"></script> -->
+  <script src="scripts/combined.js"></script>
   <script src="scripts/hangar.js"></script>
-  <!-- <script src="scripts/pilot.js"></script> -->
+  <script src="scripts/pilot.js"></script>
   <script src="scripts/plane.js"></script>
   <script src="scripts/Metar.js"></script>
   <!-- <script src="scripts/Modal.js"></script> -->
