--- a/flying.html
+++ b/flying.html
@@ -10,6 +10,7 @@
     href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet" />
   <title>Hypekingfish</title>
+  <link href="css/Background.css" rel="stylesheet"/>
   <link href="css/Base.css" rel="stylesheet" />
   <link href="css/Controller.css" rel="stylesheet" />
   <link href="css/Footer.css" rel="stylesheet" />
