Refactor live data fetching and update VATSIM status display

--- a/flying.html
+++ b/flying.html
@@ -49,32 +49,32 @@
       <h2>my VATSIM Stats</h2>
       <section class="live-status">
         <h2>Live Status</h2>
-        <div id="live-card">
-          <div id="live-text"></div>
-          <div id="live-subtext" class="muted"></div>
+        <div id="live-card" class="offline">
+          <p id="live-text">Checking VATSIM…</p>
         </div>
-        <div class="stats-container">
-          <div class="stat-item">
-            <h3>Total Pilot Hours</h3>
-            <p id="pilot-hours">Loading...</p>
-          </div>
-          <div class="stat-item">
-            <h3>Total Controller Hours</h3>
-            <p id="controller-hours">Loading...</p>
-          </div>
-          <div class="stat-item">
-            <h3>Controller Ratings</h3>
-            <ul class="ratings-list">
-              <li>S1 - Ground Controller: <span id="s1-hours">Loading...</span> hours</li>
-              <li>S2 - Tower Controller: <span id="s2-hours">Loading...</span> hours</li>
-              <li>S3 - Approach Controller: <span id="s3-hours">Loading...</span> hours</li>
-            </ul>
-          </div>
-          <div class="stat-item-hours">
-            <h3>Total Vatsim Hours</h3>
-            <p id="vatsim-hours">Loading...</p>
-          </div>
+      </section>
+      <div class="stats-container">
+        <div class="stat-item">
+          <h3>Total Pilot Hours</h3>
+          <p id="pilot-hours">Loading...</p>
         </div>
+        <div class="stat-item">
+          <h3>Total Controller Hours</h3>
+          <p id="controller-hours">Loading...</p>
+        </div>
+        <div class="stat-item">
+          <h3>Controller Ratings</h3>
+          <ul class="ratings-list">
+            <li>S1 - Ground Controller: <span id="s1-hours">Loading...</span> hours</li>
+            <li>S2 - Tower Controller: <span id="s2-hours">Loading...</span> hours</li>
+            <li>S3 - Approach Controller: <span id="s3-hours">Loading...</span> hours</li>
+          </ul>
+        </div>
+        <div class="stat-item-hours">
+          <h3>Total Vatsim Hours</h3>
+          <p id="vatsim-hours">Loading...</p>
+        </div>
+      </div>
     </div>
     <div class="flight-container">
       <div class="airport-label left">PDX (Portland Intl)</div>
