--- a/flying.html
+++ b/flying.html
@@ -219,12 +219,11 @@
     document.getElementById("last-page-update").textContent = document.lastModified.split(' ')[0];
     document.getElementById("year").textContent = new Date().getFullYear();
   </script>
-  <!-- <script src="scripts/atc.js"></script> -->
+  <script src="scripts/atc.js"></script>
   <script src="scripts/carousel.js"></script>
-  <!-- <script src="scripts/combined.js"></script> -->
+  <script src="scripts/combined.js"></script>
   <script src="scripts/hangar.js"></script>
-  <script src="scripts/live-data.js"></script>
-  <!-- <script src="scripts/pilot.js"></script> -->
+  <script src="scripts/pilot.js"></script>
   <script src="scripts/plane.js"></script>
   <script src="scripts/Metar.js"></script>
   <!-- <script src="scripts/Modal.js"></script> -->
