Add liveData.js script to flying.html for enhanced functionality

--- a/flying.html
+++ b/flying.html
@@ -223,6 +223,7 @@
   <script src="scripts/carousel.js"></script>
   <script src="scripts/combined.js"></script>
   <script src="scripts/hangar.js"></script>
+  <script src="scripts/liveData.js"></script>
   <script src="scripts/pilot.js"></script>
   <script src="scripts/plane.js"></script>
   <script src="scripts/Metar.js"></script>
